[gd_scene load_steps=3 format=2]

[ext_resource path="res://Utils/Physics Bodies/static_wall_2p5d.gd" type="Script" id=1]
[ext_resource path="res://Utils/Physics Bodies/top_area_2p5d.gd" type="Script" id=2]

[node name="StaticWall2P5D" type="Area2D"]
monitoring = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="DistToGround" type="RayCast2D" parent="."]
collision_mask = 0
collide_with_bodies = false

[node name="VolumeShape" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -10, -10, 10, -10, 10, 10, -10, 10 )

[node name="BaseArea2P5D" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 0

[node name="BaseShape" type="CollisionPolygon2D" parent="BaseArea2P5D"]
polygon = PoolVector2Array( 10, -10, 10, 10, -10, 10, -10, -10 )
disabled = true

[node name="TopArea2P5D" type="Area2D" parent="."]
monitoring = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="TopShape" type="CollisionPolygon2D" parent="TopArea2P5D"]
polygon = PoolVector2Array( 10, -10, 10, 10, -10, 10, -10, -10 )
[connection signal="draw" from="BaseArea2P5D/BaseShape" to="." method="_on_BaseShape_draw"]
